--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe application",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Andrew Carter",
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.30.2",
-    "fractional": "^1.0.0",
+    "fraction.js": "^4.2.0",
     "parcel": "^2.9.2",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.26.10"
